--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="password" name="" id="" required><br><br>
             <div class="biometria">
                 <img src="Icons/digital.png" alt="">
-                <p>Entre ultulizando sua</p>
+                <p>Entre utilizando sua</p>
                 <p>impressão digital</p>
             </div><br><br>
         <button type="submit">Entrar</button>
